--- a/angularclient/src/app/header.component.css
+++ b/angularclient/src/app/header.component.css
@@ -1,26 +1,49 @@
 header {
-  position: fixed; /* Nastaví záhlaví jako fixní prvek na stránce */
-  bottom: 0; /* Posunutí na spodní okraj stránky */
-  left: 0; /* Zarovnání na levý okraj stránky */
-  width: 100%; /* Nastavení šířky na 100% */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #f2f2f2;
+  background-color: lightgray;
 }
 
-.score {
+.info {
+  display: flex;
+  flex-direction: row;
+}
+
+.score, .miss {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Nový styl pro zarovnání textů Skóre a Miss na střed s jejich hodnotami */
+}
+
+.score .label, .miss .label {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.score .value, .miss .value {
   font-size: 18px;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
 .buttons button {
-  margin-left: 10px;
-  padding: 5px 10px;
-  background-color: #007bff;
+  margin: 0 30px 5px 10px;
+  padding: 10px 30px;
+  top:50%;
+  background-color:#0a0a23;
   color: #fff;
-  border: none;
-  border-radius: 5px;
+  /*border: none;*/
+  /*border-radius: 5px;*/
   cursor: pointer;
 }
 
