--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -4,6 +4,7 @@
       <span class="label">Skóre:</span>
       <span class="value">{{ scoreData.score }}</span>
     </div>
+    <div class="spacer"></div> <!-- Prazdný <div> pro mezeru -->
     <div class="miss">
       <span class="label">Miss:</span>
       <span class="value">{{ scoreData.misses }}</span>
