--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -13,6 +13,52 @@
 
   <div class="buttons">
     <button (click)="reset()">Reset</button>
-    <button (click)="showLeaderboard()">Leaderboard</button>
+    <button type="button" class="btn btn-info btn-lg" (click)="showLeaderboard()">Leaderboard</button>
   </div>
 </header>
+
+<!-- Modal section -->
+<!--<div class="backdrop" [style]="{'display':display}"></div>-->
+<!--<div class="modal" tabindex="-1" role="dialog"  [style]="{'display':display}">-->
+<!--  <div class="modal-dialog" role="document">-->
+<!--    <div class="modal-content">-->
+<!--      <div class="modal-header">-->
+<!--        <button type="button" class="close" aria-label="Close" (click)="closeLeaderboard()"><span aria-hidden="true">&times;</span></button>-->
+<!--        <h4 class="modal-title">Model Title</h4>-->
+<!--      </div>-->
+<!--      <div class="modal-body">-->
+<!--        <p>Model body text</p>-->
+<!--      </div>-->
+<!--      <div class="modal-footer">-->
+<!--        <button type="button" class="btn btn-default" (click)="closeLeaderboard()" >Close</button>-->
+<!--      </div>-->
+<!--    </div>&lt;!&ndash; /.modal-content &ndash;&gt;-->
+<!--  </div>&lt;!&ndash; /.modal-dialog &ndash;&gt;-->
+<!--</div>&lt;!&ndash; /.modal !&ndash;&gt;-->
+
+<div class="modal-outside" (click)="onOutsideClick($event)">
+  <div id="myModal" class="modal" #myModal>
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close" (click)="closeLeaderboard()">&times;</span>
+      <h2>Leaderboard</h2>
+      <table>
+        <thead>
+        <tr>
+          <th>Player</th>
+          <th>Score</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Generování řádků s daty hráčů -->
+        <!--      *ngFor="let <value> of <collection>"-->
+        <tr *ngFor="let player of players">
+          <td>{{ player.nickname }}</td>
+          <td>{{ player.score }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
