--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -36,6 +36,7 @@
 <!--  </div>&lt;!&ndash; /.modal-dialog &ndash;&gt;-->
 <!--</div>&lt;!&ndash; /.modal !&ndash;&gt;-->
 
+<!-- Modal section -->
 <div class="modal-outside" (click)="onOutsideClick($event)">
   <div id="myModal" class="modal" #myModal>
     <!-- Modal content -->
