--- a/angularclient/src/app/target.component.html
+++ b/angularclient/src/app/target.component.html
@@ -5,8 +5,8 @@
 </svg>
 
 <div class="score">
-  Skóre: {{ score }}
-  Miss: {{ miss }}
+<!--  Skóre: {{ score }}-->
+<!--  Miss: {{ miss }}-->
   MouseX: {{ amouseX }}
   MouseY: {{ amouseY }}
 </div>
