--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -46,7 +46,7 @@
       <table>
         <thead>
         <tr>
-          <th>Player</th>
+          <th>PlayerModel</th>
           <th>Score</th>
         </tr>
         </thead>
