--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -11,6 +11,10 @@
     </div>
   </div>
 
+  <div class="nickname">
+    <input type="text" [(ngModel)]="nickname" placeholder="Enter nickname" />
+  </div>
+
   <div class="buttons">
     <button (click)="reset()">Reset</button>
     <button type="button" class="btn btn-info btn-lg" (click)="showLeaderboard()">Leaderboard</button>
