--- a/angularclient/src/app/target.component.html
+++ b/angularclient/src/app/target.component.html
@@ -7,6 +7,7 @@
 <div class="score">
 <!--  Skóre: {{ score }}-->
 <!--  Miss: {{ miss }}-->
-  MouseX: {{ amouseX }}
-  MouseY: {{ amouseY }}
+
+<!--  MouseX: {{ amouseX }}-->
+<!--  MouseY: {{ amouseY }}-->
 </div>
