--- a/angularclient/src/app/timer.component.html
+++ b/angularclient/src/app/timer.component.html
@@ -1,3 +1,3 @@
 <div class="timer">
-  <span class="time-left">{{ timeLeft }}</span>
+  <span class="time-left">{{ this.timerService.getTime() }}</span>
 </div>
