Add full logic for timer adn reseting timer

--- a/angularclient/src/app/app.component.html
+++ b/angularclient/src/app/app.component.html
@@ -1,7 +1,8 @@
 <body>
-<app-timer></app-timer>
-
+<!-- pozor !! záleží na pořadí component v tomto html souboru, které se vyhodnocují první... pozor na click event handlers -->
 <app-target></app-target>
+
+<app-timer></app-timer>
 
 <app-header></app-header>
 </body>
