Added save results to database (POST)

--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="info">
     <div class="score">
-      <span class="label">Skóre:</span>
+      <span class="label">Score:</span>
       <span class="value">{{ scoreData.score }}</span>
     </div>
     <div class="spacer"></div> <!-- Prazdný <div> pro mezeru -->
