Get rid of header textbox

--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -11,9 +11,9 @@
     </div>
   </div>
 
-  <div class="nickname">
-    <input type="text" [(ngModel)]="nickname" placeholder="Enter nickname" />
-  </div>
+<!--  <div class="nickname">-->
+<!--    <input type="text" [(ngModel)]="nickname" placeholder="Enter nickname" />-->
+<!--  </div>-->
 
   <div class="buttons">
     <button (click)="reset()">Reset</button>
