--- a/angularclient/src/app/header.component.css
+++ b/angularclient/src/app/header.component.css
@@ -99,7 +99,7 @@ header {
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
 }
 
@@ -112,9 +112,9 @@ header {
 
 /* Styl pro tabulku */
 table {
-  width: 100%;
+  width: 70%;
   border-collapse: collapse;
-  margin-top: 10px;
+  margin: 0 auto;
 }
 
 table th, table td {
