--- a/angularclient/src/app/header.component.css
+++ b/angularclient/src/app/header.component.css
@@ -136,6 +136,7 @@ tr:nth-child(even) {
 h2 {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 40px;
 }
 
 /* Styl pro zavření modálního okna na mobilních zařízeních */
