--- a/angularclient/src/app/timer.component.css
+++ b/angularclient/src/app/timer.component.css
@@ -1,7 +1,7 @@
 .timer {
   float: right; /* Umištění vpravo */
   margin: 20px 20px 0 0; /* Vzdálenost od pravého okraje */
-  font-size: 24px;
+  font-size: 40px;
   font-weight: bold;
 }
 
@@ -31,7 +31,7 @@
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 30%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -49,37 +49,58 @@
   cursor: pointer;
 }
 
-/* Styl pro tabulku */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-
-table th, table td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
-}
-
-table th {
-  background-color: #f2f2f2;
-}
-
-/* Styl pro řádky tabulky */
-tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
 /* Styl pro nadpisy v modálním okně */
 h2 {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 40px;
 }
 
-button {
+/* Modifikace stylu pro info div */
+.info {
+  display: flex;
+  justify-content: center; /* Zarovnání na střed */
+  align-items: center;
+  margin: 10px 0; /* Snížení mezery na 10px */
+}
+
+.score,
+.miss {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 10px; /* Mezera mezi prvky "Score" a "Miss" */
+  font-size: 30px;
+}
+
+.label {
+  font-weight: bold;
+}
+
+/*.spacer {*/
+/*  width: 20px; !* Prostor mezi score a miss *!*/
+/*}*/
+
+/* Styl pro vstupní pole pro nickname */
+.nickname {
+  margin-top: 20px;
   padding: 10px;
 }
+
+/* Styl pro tlačítko "Save" */
+.save {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.save:hover {
+  background-color: #45a049;
+}
+
 
 /* Styl pro zavření modálního okna na mobilních zařízeních */
 @media screen and (max-width: 600px) {
