--- a/angularclient/src/app/app.component.html
+++ b/angularclient/src/app/app.component.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Your Angular App</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <!-- Other meta tags and CSS files go here -->
+</head>
 <body>
 <!-- pozor !! záleží na pořadí component v tomto html souboru, které se vyhodnocují první... pozor na click event handlers -->
 <app-target></app-target>
@@ -6,6 +14,7 @@
 
 <app-header></app-header>
 </body>
+</html>
 
 <style>
 
