--- a/angularclient/src/app/header.component.html
+++ b/angularclient/src/app/header.component.html
@@ -1,3 +1,4 @@
+<!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">-->
 <header>
   <div class="info">
     <div class="score">
